# useful_exercises

./: CMakeLists.txt
src/: CMakeLists.txt  barcode_ex.c  dangling_reference_ex.c  dangling_reference_fixed_ex.c  filer.c  first_file.txt  linked_lists_ex.c  tree_for_loop_ex.c
