cmake_minimum_required(VERSION 3.29)
project(useful_exercises C)

set(CMAKE_C_STANDARD 11)

add_executable(tree_for_loop_ex.c tree_for_loop_ex.c)
add_executable(test_ex.c test_ex.c)
add_executable(linked_lists_ex.c linked_lists_ex.c)
add_executable(dangling_reference_ex.c dangling_reference_ex.c)
add_executable(dangling_reference_fixed_ex.c dangling_reference_fixed_ex.c)
add_executable(barcode_ex.c barcode_ex.c)
add_executable(filer.c filer.c)




